Menu UI: Mobile address hiding bug fixed, working on mobile grid.

--- a/app/scss/application.scss
+++ b/app/scss/application.scss
@@ -35,9 +35,9 @@
 
 	position: fixed;
 	width: 100%;
-	height: 288px;
+	height: 86px;
 
-	bottom: 97px;
+	top: 0;
 	right: 0;
 }
 
